preserve iteration order for loaded snapshots
GitOrigin-RevId: 5c662e06f15e1c70eafff6bd6fd914ede4dd1a2a